Fix composition of deletions